objects/Object3__c.object
<CustomObject>
    <fields>
        <fullName>BigName__c</fullName>
        <label>BigName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object2</label>
        <referenceTo>Object2__c</referenceTo>
        <relationshipLabel>Object3</relationshipLabel>
        <relationshipName>Object3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R1__c</fullName>
        <label>Object1</label>
        <referenceTo>Object1__c</referenceTo>
        <relationshipLabel>Object3</relationshipLabel>
        <relationshipName>Object3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Object3</label>
    <nameField>
        <label>Object3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>